# cpp-python-skeleton

./: .gitignore  CMakeLists.txt  README.md  hello_world.py
include/: hello_world.hpp
src/: CMakeLists.txt  hello_world.cpp
test/: CMakeLists.txt  test_hello_world.cpp  test_main.cpp
